# microcl-compiler

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.template.json  README.md
lib/: build.cmake
lib/include/microcl/llvm/Transforms/: PrintAnnotatedFunctions.h  RewriteRuntimeFunctions.h
lib/include/microcl/plugin/: Attributes.h
lib/llvm/Transforms/: PrintAnnotatedFunctions.cc  RewriteRuntimeFunctions.cc  Utils.h
lib/plugin/: DeviceAttributes.cc
scripts/: CIRTargets.cmake  ListTargetDeps.cmake  RemoveTargetDeps.cmake  Utils.cmake
tests/: README.md  simple.cc
tests/examples/: add_kernel.cc  simple.cc
tools/: build.cmake
tools/plugin/: README.md  build.cmake  clang-plugin.cc  common.cc  common.h  microcl-plugin.cc  opt-plugin.cc
